isla/parsers/isla/isla/islaParser.py
# Generated from isla.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class islaParser ( Parser ):

    grammarFileName = "isla.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "':'", "';'", "'vars'", "'{'", 
                     "'}'", "','", "'NUM'", "'constraint'", "'forall'", 
                     "'in'", "'exists'", "'='", "'not'", "'and'", "'or'", 
                     "'xor'", "'implies'", "'iff'", "'int'", "'('", "')'", 
                     "'true'", "'false'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'/'", "'*'", "'+'", "'-'", "'>='", "'<='", 
                     "'>'", "'<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STRING", "ID", "INT", "ESC", "DIV", 
                      "MUL", "PLUS", "MINUS", "GEQ", "LEQ", "GT", "LT", 
                      "WS", "LINE_COMMENT" ]

    RULE_start = 0
    RULE_constDecl = 1
    RULE_varDecls = 2
    RULE_varDecl = 3
    RULE_varType = 4
    RULE_constraint = 5
    RULE_formula = 6
    RULE_sexpr = 7
    RULE_predicateArg = 8

    ruleNames =  [ "start", "constDecl", "varDecls", "varDecl", "varType", 
                   "constraint", "formula", "sexpr", "predicateArg" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    STRING=25
    ID=26
    INT=27
    ESC=28
    DIV=29
    MUL=30
    PLUS=31
    MINUS=32
    GEQ=33
    LEQ=34
    GT=35
    LT=36
    WS=37
    LINE_COMMENT=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constDecl(self):
            return self.getTypedRuleContext(islaParser.ConstDeclContext,0)


        def varDecls(self):
            return self.getTypedRuleContext(islaParser.VarDeclsContext,0)


        def constraint(self):
            return self.getTypedRuleContext(islaParser.ConstraintContext,0)


        def getRuleIndex(self):
            return islaParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = islaParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.constDecl()
            self.state = 19
            self.varDecls()
            self.state = 20
            self.constraint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cid = None # Token
            self.ntid = None # Token

        def LT(self):
            return self.getToken(islaParser.LT, 0)

        def GT(self):
            return self.getToken(islaParser.GT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(islaParser.ID)
            else:
                return self.getToken(islaParser.ID, i)

        def getRuleIndex(self):
            return islaParser.RULE_constDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)




    def constDecl(self):

        localctx = islaParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(islaParser.T__0)
            self.state = 23
            localctx.cid = self.match(islaParser.ID)
            self.state = 24
            self.match(islaParser.T__1)
            self.state = 25
            self.match(islaParser.LT)
            self.state = 26
            localctx.ntid = self.match(islaParser.ID)
            self.state = 27
            self.match(islaParser.GT)
            self.state = 28
            self.match(islaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(islaParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(islaParser.VarDeclContext,i)


        def getRuleIndex(self):
            return islaParser.RULE_varDecls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecls" ):
                listener.enterVarDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecls" ):
                listener.exitVarDecls(self)




    def varDecls(self):

        localctx = islaParser.VarDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(islaParser.T__3)
            self.state = 31
            self.match(islaParser.T__4)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.varDecl()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==islaParser.ID):
                    break

            self.state = 37
            self.match(islaParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(islaParser.ID)
            else:
                return self.getToken(islaParser.ID, i)

        def varType(self):
            return self.getTypedRuleContext(islaParser.VarTypeContext,0)


        def getRuleIndex(self):
            return islaParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = islaParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(islaParser.ID)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==islaParser.T__6:
                self.state = 40
                self.match(islaParser.T__6)
                self.state = 41
                self.match(islaParser.ID)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(islaParser.T__1)
            self.state = 48
            self.varType()
            self.state = 49
            self.match(islaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(islaParser.LT, 0)

        def ID(self):
            return self.getToken(islaParser.ID, 0)

        def GT(self):
            return self.getToken(islaParser.GT, 0)

        def getRuleIndex(self):
            return islaParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)




    def varType(self):

        localctx = islaParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varType)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [islaParser.LT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(islaParser.LT)
                self.state = 52
                self.match(islaParser.ID)
                self.state = 53
                self.match(islaParser.GT)
                pass
            elif token in [islaParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(islaParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)


        def getRuleIndex(self):
            return islaParser.RULE_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint" ):
                listener.enterConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint" ):
                listener.exitConstraint(self)




    def constraint(self):

        localctx = islaParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(islaParser.T__8)
            self.state = 58
            self.match(islaParser.T__4)
            self.state = 59
            self.formula(0)
            self.state = 60
            self.match(islaParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return islaParser.RULE_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExistsMexprContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.varId = None # Token
            self.inId = None # Token
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(islaParser.STRING, 0)
        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(islaParser.ID)
            else:
                return self.getToken(islaParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExistsMexpr" ):
                listener.enterExistsMexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExistsMexpr" ):
                listener.exitExistsMexpr(self)


    class NegationContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegation" ):
                listener.enterNegation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegation" ):
                listener.exitNegation(self)


    class ImplicationContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(islaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(islaParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplication" ):
                listener.enterImplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplication" ):
                listener.exitImplication(self)


    class ForallMexprContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.varId = None # Token
            self.inId = None # Token
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(islaParser.STRING, 0)
        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(islaParser.ID)
            else:
                return self.getToken(islaParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForallMexpr" ):
                listener.enterForallMexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForallMexpr" ):
                listener.exitForallMexpr(self)


    class ExistsIntContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(islaParser.ID, 0)
        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExistsInt" ):
                listener.enterExistsInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExistsInt" ):
                listener.exitExistsInt(self)


    class DisjunctionContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(islaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(islaParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisjunction" ):
                listener.enterDisjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisjunction" ):
                listener.exitDisjunction(self)


    class PredicateAtomContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(islaParser.ID, 0)
        def predicateArg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(islaParser.PredicateArgContext)
            else:
                return self.getTypedRuleContext(islaParser.PredicateArgContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateAtom" ):
                listener.enterPredicateAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateAtom" ):
                listener.exitPredicateAtom(self)


    class SMTFormulaContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def sexpr(self):
            return self.getTypedRuleContext(islaParser.SexprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSMTFormula" ):
                listener.enterSMTFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSMTFormula" ):
                listener.exitSMTFormula(self)


    class EquivalenceContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(islaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(islaParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquivalence" ):
                listener.enterEquivalence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquivalence" ):
                listener.exitEquivalence(self)


    class ExistsContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.varId = None # Token
            self.inId = None # Token
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(islaParser.ID)
            else:
                return self.getToken(islaParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExists" ):
                listener.enterExists(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExists" ):
                listener.exitExists(self)


    class ConjunctionContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(islaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(islaParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConjunction" ):
                listener.enterConjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConjunction" ):
                listener.exitConjunction(self)


    class ParFormulaContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParFormula" ):
                listener.enterParFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParFormula" ):
                listener.exitParFormula(self)


    class ForallContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.varId = None # Token
            self.inId = None # Token
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(islaParser.ID)
            else:
                return self.getToken(islaParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForall" ):
                listener.enterForall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForall" ):
                listener.exitForall(self)


    class ExclusiveOrContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(islaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(islaParser.FormulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExclusiveOr" ):
                listener.enterExclusiveOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExclusiveOr" ):
                listener.exitExclusiveOr(self)


    class ForallIntContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(islaParser.ID, 0)
        def formula(self):
            return self.getTypedRuleContext(islaParser.FormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForallInt" ):
                listener.enterForallInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForallInt" ):
                listener.exitForallInt(self)



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = islaParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = islaParser.ForallContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 63
                self.match(islaParser.T__9)
                self.state = 64
                localctx.varId = self.match(islaParser.ID)
                self.state = 65
                self.match(islaParser.T__10)
                self.state = 66
                localctx.inId = self.match(islaParser.ID)
                self.state = 67
                self.match(islaParser.T__1)
                self.state = 68
                self.formula(15)
                pass

            elif la_ == 2:
                localctx = islaParser.ExistsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                self.match(islaParser.T__11)
                self.state = 70
                localctx.varId = self.match(islaParser.ID)
                self.state = 71
                self.match(islaParser.T__10)
                self.state = 72
                localctx.inId = self.match(islaParser.ID)
                self.state = 73
                self.match(islaParser.T__1)
                self.state = 74
                self.formula(14)
                pass

            elif la_ == 3:
                localctx = islaParser.ForallMexprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.match(islaParser.T__9)
                self.state = 76
                localctx.varId = self.match(islaParser.ID)
                self.state = 77
                self.match(islaParser.T__12)
                self.state = 78
                self.match(islaParser.STRING)
                self.state = 79
                self.match(islaParser.T__10)
                self.state = 80
                localctx.inId = self.match(islaParser.ID)
                self.state = 81
                self.match(islaParser.T__1)
                self.state = 82
                self.formula(13)
                pass

            elif la_ == 4:
                localctx = islaParser.ExistsMexprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 83
                self.match(islaParser.T__11)
                self.state = 84
                localctx.varId = self.match(islaParser.ID)
                self.state = 85
                self.match(islaParser.T__12)
                self.state = 86
                self.match(islaParser.STRING)
                self.state = 87
                self.match(islaParser.T__10)
                self.state = 88
                localctx.inId = self.match(islaParser.ID)
                self.state = 89
                self.match(islaParser.T__1)
                self.state = 90
                self.formula(12)
                pass

            elif la_ == 5:
                localctx = islaParser.NegationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 91
                self.match(islaParser.T__13)
                self.state = 92
                self.formula(11)
                pass

            elif la_ == 6:
                localctx = islaParser.ExistsIntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 93
                self.match(islaParser.T__11)
                self.state = 94
                self.match(islaParser.T__19)
                self.state = 95
                self.match(islaParser.ID)
                self.state = 96
                self.match(islaParser.T__1)
                self.state = 97
                self.formula(5)
                pass

            elif la_ == 7:
                localctx = islaParser.ForallIntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 98
                self.match(islaParser.T__9)
                self.state = 99
                self.match(islaParser.T__19)
                self.state = 100
                self.match(islaParser.ID)
                self.state = 101
                self.match(islaParser.T__1)
                self.state = 102
                self.formula(4)
                pass

            elif la_ == 8:
                localctx = islaParser.PredicateAtomContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 103
                self.match(islaParser.ID)
                self.state = 104
                self.match(islaParser.T__20)
                self.state = 105
                self.predicateArg()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==islaParser.T__6:
                    self.state = 106
                    self.match(islaParser.T__6)
                    self.state = 107
                    self.predicateArg()
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self.match(islaParser.T__21)
                pass

            elif la_ == 9:
                localctx = islaParser.SMTFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 115
                self.sexpr()
                pass

            elif la_ == 10:
                localctx = islaParser.ParFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 116
                self.match(islaParser.T__20)
                self.state = 117
                self.formula(0)
                self.state = 118
                self.match(islaParser.T__21)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 137
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = islaParser.ConjunctionContext(self, islaParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 122
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 123
                        self.match(islaParser.T__14)
                        self.state = 124
                        self.formula(11)
                        pass

                    elif la_ == 2:
                        localctx = islaParser.DisjunctionContext(self, islaParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 125
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 126
                        self.match(islaParser.T__15)
                        self.state = 127
                        self.formula(10)
                        pass

                    elif la_ == 3:
                        localctx = islaParser.ExclusiveOrContext(self, islaParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 128
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 129
                        self.match(islaParser.T__16)
                        self.state = 130
                        self.formula(9)
                        pass

                    elif la_ == 4:
                        localctx = islaParser.ImplicationContext(self, islaParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 131
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 132
                        self.match(islaParser.T__17)
                        self.state = 133
                        self.formula(8)
                        pass

                    elif la_ == 5:
                        localctx = islaParser.EquivalenceContext(self, islaParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 134
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 135
                        self.match(islaParser.T__18)
                        self.state = 136
                        self.formula(7)
                        pass

             
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class SexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return islaParser.RULE_sexpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SexprStrContext(SexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.SexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(islaParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSexprStr" ):
                listener.enterSexprStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSexprStr" ):
                listener.exitSexprStr(self)


    class SexprNumContext(SexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a islaParser.SexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(islaParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSexprNum" ):
                listener.enterSexprNum(self)
